--- a/styles.css
+++ b/styles.css
@@ -72,7 +72,7 @@ a {
 .nav {
     font-family: Arial Arial, Helvetica, sans-serif;
     font-size: 1.25em;
-    margin-right: 30%;
+    margin-right: 15%;
     border: 2px solid black;
     border-radius: 5px;
     padding: 2.5px;
@@ -196,4 +196,9 @@ td {
     margin-top: 20%;
     justify-content: center;
     align-items: center;
+}
+
+.gif {
+    width: 20%;
+    margin-left: 50px;
 }
